<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/add_star_bg"
    tools:context=".AddStar">

    <TextView
        android:id="@+id/title_act5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/rb"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createStarTitle_act5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_star"
        android:textColor="@color/whiteLight"
        android:layout_margin="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_act5" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createStarTitle_act5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/starName_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:ems="10"
                android:hint="@string/star_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/whiteLight" />

            <EditText
                android:id="@+id/starPswd_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/star_pswd"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/whiteLight" />

            <Button
                android:id="@+id/createbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/create_star"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:backgroundTint="#000000" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/help_5"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/help_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>