<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_page_bg"
    tools:context=".SignUpPage">

    <TextView
        android:id="@+id/lblTitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblSignupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/signup"
        android:textColor="@color/whiteLight"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTitle3" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSignupTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtUsernameSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/whiteLight"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtEmailSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="yes"
                android:inputType="textEmailAddress"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/whiteLight"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtPasswordSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="yes"
                android:inputType="textPassword"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/whiteLight"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/button_bg_round"
                android:padding="0dp"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24sp"
                app:backgroundTint="@color/black" />

            <TextView
                android:id="@+id/lblLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="12dp"
                android:text="@string/login_here"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/pbSignup"
                style="?android:attr/progressBarStyle"
                android:layout_marginTop="24dp"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/ivHelp2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/help_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>